[package]
edition      = "2024"
name         = "esp-ble-nostd-tetris"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-ble-nostd-tetris"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32c3", "log-04", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3", "log-04"] }
log                    = "0.4.27"

bt-hci = "0.8.0"
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-futures = "0.1.0"
embassy-sync = "0.7"
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "esp-alloc",
  "esp32c3",
  "log-04",
  "unstable",
] }
trouble-host = { version = "0.6.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

no_std_tetris = { path = "../no_std_tetris/no_std_tetris", package = "no_std_tetris" }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
